works for random inputs and outs; reshape vicon inputs to lstm class inputs

--- a/pyrnn/src/testPYRNN.ipynb
+++ b/pyrnn/src/testPYRNN.ipynb
@@ -410,24 +410,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([293694, 9])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    1     2     3     4     5     6     7     8     9\n",
+      "[torch.FloatTensor of size 1x9]\n",
+      "\n",
+      "Variable containing:\n",
+      "    1     2     3     4     5     6     7     8     9\n",
+      "[torch.FloatTensor of size 1x9]\n",
+      " Variable containing:\n",
+      " 3  5  6\n",
+      "[torch.FloatTensor of size 1x3]\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "train_in.size()"
+    "import torch\n",
+    "from torch.autograd import Variable\n",
+    "t = torch.Tensor([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "s = torch.Tensor([[1, 2, 3, 4, 5, 6 ,7, 8, 9]])\n",
+    "targ = torch.Tensor([[3, 5, 6]])\n",
+    "\n",
+    "s.expand(5,9)\n",
+    "print s\n",
+    "s = Variable(s)\n",
+    "t = Variable(targ)\n",
+    "\n",
+    "print s, t\n"
    ]
   },
   {
