pyrnn at farnn state; next build quadratic layer

--- a/pyrnn/src/testPYRNN.ipynb
+++ b/pyrnn/src/testPYRNN.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -420,15 +420,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    1     2     3     4     5     6     7     8     9\n",
-      "[torch.FloatTensor of size 1x9]\n",
+      "(0 ,.,.) = \n",
+      "   1   2   3   4   5   6   7   8   9\n",
+      "[torch.FloatTensor of size 1x1x9]\n",
       "\n",
-      "Variable containing:\n",
-      "    1     2     3     4     5     6     7     8     9\n",
-      "[torch.FloatTensor of size 1x9]\n",
-      " Variable containing:\n",
+      "\n",
       " 3  5  6\n",
       "[torch.FloatTensor of size 1x3]\n",
+      "\n",
+      "\n",
+      " 3  5  6\n",
+      " 3  5  6\n",
+      " 3  5  6\n",
+      " 3  5  6\n",
+      " 3  5  6\n",
+      "[torch.FloatTensor of size 5x3]\n",
       "\n"
      ]
     }
@@ -441,12 +447,50 @@
     "s = torch.Tensor([[1, 2, 3, 4, 5, 6 ,7, 8, 9]])\n",
     "targ = torch.Tensor([[3, 5, 6]])\n",
     "\n",
-    "s.expand(5,9)\n",
-    "print s\n",
-    "s = Variable(s)\n",
-    "t = Variable(targ)\n",
+    "# expand input\n",
+    "ss = torch.unsqueeze(s, 1)\n",
+    "print ss\n",
+    "x = torch.Tensor(5,1,9)\n",
+    "# expand_as(x)\n",
+    "ch = ss.expand_as(x)\n",
+    "# print ch.size()\n",
+    "os = (torch.unsqueeze(s,1)).expand_as(torch.LongTensor(5,1,9))\n",
+    "# print Variable(os)\n",
     "\n",
-    "print s, t\n"
+    "#expand output\n",
+    "tt = targ.expand(5,3)\n",
+    "print targ\n",
+    "print tt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import rospy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<module 'rospy' from '/opt/ros/indigo/lib/python2.7/dist-packages/rospy/__init__.pyc'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (rospy)"
    ]
   },
   {
