adding QP layer

--- a/pyrnn/src/testPYRNN.ipynb
+++ b/pyrnn/src/testPYRNN.ipynb
@@ -410,7 +410,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.autograd import Variable\n",
+    "import numpy as np\n",
+    "import numpy.random as npr\n",
+    "import numpy.testing as npt\n",
+    "# import numdifftools as nd\n",
+    "import cvxpy as cp\n",
+    "\n",
+    "# import adact\n",
+    "# import adact_forward_ip as aip\n",
+    "\n",
+    "npr.seed(1)\n",
+    "nz, neq, nineq = 5, 0, 4\n",
+    "\n",
+    "L = np.tril(npr.randn(nz,nz)) + 2.*np.eye(nz,nz)\n",
+    "Q = L.dot(L.T)+1e-8*np.eye(nz)\n",
+    "G = 1000.*npr.randn(nineq,nz)\n",
+    "A = 10000.*npr.randn(neq,nz)\n",
+    "z0 = 1.*npr.randn(nz)\n",
+    "s0 = 100.*np.ones(nineq)\n",
+    "\n",
+    "p = npr.randn(nz)\n",
+    "\n",
+    "p_t, Q_t, G_t, A_t, z0_t, s0_t = [torch.Tensor(x) for x in [p, Q, G, A, z0, s0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 0 4\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print nz,neq, nineq\n",
+    "# print  p_t, Q_t, G_t, A_t, z0_t, s0_t\n",
+    "t = '{}.{}'.format(2, 'optNET')\n",
+    "t += '.Qpenalty={}'.format(0.1)\n",
+    "print A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -421,76 +479,63 @@
      "text": [
       "\n",
       "(0 ,.,.) = \n",
-      "   1   2   3   4   5   6   7   8   9\n",
-      "[torch.FloatTensor of size 1x1x9]\n",
+      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
+      "           ...             ⋱             ...          \n",
+      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
       "\n",
+      "(1 ,.,.) = \n",
+      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
+      "           ...             ⋱             ...          \n",
+      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
       "\n",
-      " 3  5  6\n",
-      "[torch.FloatTensor of size 1x3]\n",
+      "(2 ,.,.) = \n",
+      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
+      "           ...             ⋱             ...          \n",
+      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
       "\n",
+      "(3 ,.,.) = \n",
+      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
+      "           ...             ⋱             ...          \n",
+      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
       "\n",
-      " 3  5  6\n",
-      " 3  5  6\n",
-      " 3  5  6\n",
-      " 3  5  6\n",
-      " 3  5  6\n",
-      "[torch.FloatTensor of size 5x3]\n",
+      "(4 ,.,.) = \n",
+      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
+      "           ...             ⋱             ...          \n",
+      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
+      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
+      "[torch.DoubleTensor of size 5x64x64]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "from torch.autograd import Variable\n",
-    "t = torch.Tensor([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "nx = (2**2)**3 \n",
+    "Q = 0.1 * torch.eye(nx).double()\n",
+    "G = -torch.eye(nx).double()\n",
+    "h = torch.zeros(nx).double()\n",
+    "# print G, h\n",
     "\n",
-    "s = torch.Tensor([[1, 2, 3, 4, 5, 6 ,7, 8, 9]])\n",
-    "targ = torch.Tensor([[3, 5, 6]])\n",
-    "\n",
-    "# expand input\n",
-    "ss = torch.unsqueeze(s, 1)\n",
-    "print ss\n",
-    "x = torch.Tensor(5,1,9)\n",
-    "# expand_as(x)\n",
-    "ch = ss.expand_as(x)\n",
-    "# print ch.size()\n",
-    "os = (torch.unsqueeze(s,1)).expand_as(torch.LongTensor(5,1,9))\n",
-    "# print Variable(os)\n",
-    "\n",
-    "#expand output\n",
-    "tt = targ.expand(5,3)\n",
-    "print targ\n",
-    "print tt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import rospy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<module 'rospy' from '/opt/ros/indigo/lib/python2.7/dist-packages/rospy/__init__.pyc'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (rospy)"
+    "Q = Q.unsqueeze(0).expand(5, Q.size(0), Q.size(1))\n",
+    "print Q"
    ]
   },
   {
