--- a/pyrnn/src/testPYRNN.ipynb
+++ b/pyrnn/src/testPYRNN.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -477,75 +477,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Parameter containing:\n",
+      " 0.5994  0.7345\n",
+      "-0.8123 -0.4227\n",
+      "-0.2148 -0.4595\n",
+      "-0.5660 -0.1029\n",
+      "[torch.FloatTensor of size 4x2]\n",
       "\n",
-      "(0 ,.,.) = \n",
-      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
-      "           ...             ⋱             ...          \n",
-      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
-      "\n",
-      "(1 ,.,.) = \n",
-      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
-      "           ...             ⋱             ...          \n",
-      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
-      "\n",
-      "(2 ,.,.) = \n",
-      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
-      "           ...             ⋱             ...          \n",
-      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
-      "\n",
-      "(3 ,.,.) = \n",
-      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
-      "           ...             ⋱             ...          \n",
-      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
-      "\n",
-      "(4 ,.,.) = \n",
-      "  0.1000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.1000  0.0000  ...   0.0000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.1000  ...   0.0000  0.0000  0.0000\n",
-      "           ...             ⋱             ...          \n",
-      "  0.0000  0.0000  0.0000  ...   0.1000  0.0000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.1000  0.0000\n",
-      "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.1000\n",
-      "[torch.DoubleTensor of size 5x64x64]\n",
-      "\n"
+      "[[-1. -0. -0. -0. -0. -0.]\n",
+      " [-0. -1. -0. -0. -0. -0.]\n",
+      " [-0. -0. -1. -0. -0. -0.]\n",
+      " [-0. -0. -0. -1. -0. -0.]\n",
+      " [-0. -0. -0. -0. -1. -0.]\n",
+      " [-0. -0. -0. -0. -0. -1.]]\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "\nUnexpected input: Expected a non-empty list of lists.\nIf you are interested in helping expand the functionality\nfor your use case please send in an issue or PR at\nhttp://github.com/bamos/block",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-77-ac7c7fb53720>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mg1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mnewg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mblock\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mg1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mg2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mg3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mg4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mnewg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/robotec/anaconda2/lib/python2.7/site-packages/block/block.pyc\u001b[0m in \u001b[0;36mblock\u001b[0;34m(rows, dtype, arrtype)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mIf\u001b[0m \u001b[0myou\u001b[0m \u001b[0mare\u001b[0m \u001b[0minterested\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mhelping\u001b[0m \u001b[0mexpand\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mfunctionality\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0myour\u001b[0m \u001b[0muse\u001b[0m \u001b[0mcase\u001b[0m \u001b[0mplease\u001b[0m \u001b[0msend\u001b[0m \u001b[0;32min\u001b[0m \u001b[0man\u001b[0m \u001b[0missue\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mPR\u001b[0m \u001b[0mat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m http://github.com/bamos/block''')\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mrowLens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: \nUnexpected input: Expected a non-empty list of lists.\nIf you are interested in helping expand the functionality\nfor your use case please send in an issue or PR at\nhttp://github.com/bamos/block"
      ]
     }
    ],
    "source": [
-    "nx = (2**2)**3 \n",
-    "Q = 0.1 * torch.eye(nx).double()\n",
-    "G = -torch.eye(nx).double()\n",
-    "h = torch.zeros(nx).double()\n",
-    "# print G, h\n",
+    "from torch.nn.parameter import Parameter\n",
+    "L = Parameter(torch.tril(torch.rand(2, 2)))\n",
+    "M = Variable(torch.tril(torch.ones(2, 2)))\n",
+    "L = M*L\n",
+    "Q = L.mm(L.t()) + 0.001 * Variable(torch.eye(2))\n",
+    "Q = Q.unsqueeze(0).expand(5,2,2)\n",
+    "# print Q\n",
+    "G = Parameter(torch.Tensor(4,2).uniform_(-1,1))\n",
+    "print G\n",
+    "G = G.unsqueeze(0).expand(5, 4, 2)\n",
+    "# print G\n",
+    "x = torch.Tensor(5, 1, 9)\n",
+    "# print x\n",
+    "# z0 = nn.Linear(2*4*4)\n",
+    "#-------------------------------------------------------------#\n",
+    "g = torch.eye(12)\n",
     "\n",
-    "Q = Q.unsqueeze(0).expand(5, Q.size(0), Q.size(1))\n",
-    "print Q"
+    "g1 = -torch.eye(6)\n",
+    "g2 = torch.zeros(6)\n",
+    "g3 = torch.zeros(6)\n",
+    "g4 = torch.eye(6)\n",
+    "\n",
+    "from block import block\n",
+    "\n",
+    "print g1.numpy()\n",
+    "newg = block(( g1.numpy(), g2.numpy(), g3.numpy(), g4.numpy() ))\n",
+    "\n",
+    "print newg"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
